--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,9 +4,9 @@ spring.datasource.hikari.maximumPoolSize=5
 logging.pattern.console=%-5level %logger{36} - %msg%n
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5433/adverts
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 #drop n create table again, good for testing, comment this in production
 #spring.jpa.hibernate.ddl-auto=create
