added security with JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.activemq.password=admin
 new.advert.queue=new.advert.for.review
 
 list.of.stop.words=bad,word,stop,superbadword
+
+jwt.secret=supersecretcode
