--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,10 @@
 					<groupId>org.junit.vintage</groupId>
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
+					<exclusion>
+						<groupId>junit</groupId>
+						<artifactId>junit</artifactId>
+					</exclusion>
 			</exclusions>
 		</dependency>
 <!--		<dependency>-->
