--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,13 @@ services:
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=adverts
+  prometheus:
+    image: prom/prometheus
+    volumes:
+      - ./src/main/resources/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - '9090:9090'
+  grafana:
+    image: grafana/grafana
+    ports:
+      - '3000:3000'
