--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ new.advert.queue=new.advert.for.review
 list.of.stop.words=bad,word,stop,superbadword
 
 jwt.secret=supersecretcode
+
+management.endpoints.web.exposure.include=prometheus,health,info,metric
