--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/adverts
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-#drop n create table again, good for testing, comment this in production
-#spring.jpa.hibernate.ddl-auto=create
+#drop and create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
